--- a/index.html
+++ b/index.html
@@ -11,41 +11,47 @@
 	<div id="titleArea">
 		<h1 id="title">Greyscale.dev!</h1>
 		<div id="subtitleArea">
-			<a href="https://github.greyscale.dev"><img src="./assets/GitHub_Logo_White.png" id="githubButton" alt="GitHub link"></a>
+			<a href="https://github.greyscale.dev" id="githubButton"><img src="./assets/GitHub_Logo_White.png" alt="GitHub link"></a>
 			<h2 id="subtitle">It's a site that I own now!</h2>
-			<a href="https://github.greyscale.dev"><img src="./assets/GitHub_Logo_White.png" id="githubButton" href="https://github.greyscale.dev"></a>
+			<a href="https://github.greyscale.dev" id="linkedInButton"><img src="./assets/LI-Logo.png" alt="LinkedIn Link"></a>
 		</div>
 	</div>
 
 	<div id="contentArea">
 		<a class="quick">
 			<div class="quickContent">
-				Initiative tracker!
+				<img src="./assets/initiativeThumb.png">
+				<h3>Initiative tracker!</h3>
 			</div>
 		</a>
 		<a class="quick">
 			<div class="quickContent">
-				Initiative tracker!
+				<h3>Initiative tracker!</h3>
 			</div>
 		</a>
 		<a class="quick">
 			<div class="quickContent">
-				Initiative tracker!
+				<h3>Initiative tracker!</h3>
 			</div>
 		</a>
 		<a class="quick">
 			<div class="quickContent">
-				Initiative tracker!
+				<h3>Initiative tracker!</h3>
 			</div>
 		</a>
 		<a class="quick">
 			<div class="quickContent">
-				Initiative tracker!
+				<h3>Initiative tracker!</h3>
 			</div>
 		</a>
 		<a class="quick">
 			<div class="quickContent">
-				Initiative tracker!
+				<h3>Initiative tracker!</h3>
+			</div>
+		</a>
+		<a class="quick">
+			<div class="quickContent">
+				<h3>Initiative tracker!</h3>
 			</div>
 		</a>
 	</div>
