--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 		<h1 id="title">Greyscale.dev!</h1>
 		<div id="subtitleArea">
 			<a href="https://github.greyscale.dev" id="githubButton"><img src="./assets/GitHub_Logo_White.png" alt="GitHub link"></a>
-			<h2 id="subtitle">It's a site that I own now!</h2>
-			<a href="https://github.greyscale.dev" id="linkedInButton"><img src="./assets/LI-Logo.png" alt="LinkedIn Link"></a>
+			<h2 id="subtitle">Very much a work in progress!</h2>
+			<a href="https://www.linkedin.com/in/dave-churchill-0085b9176/" id="linkedInButton"><img src="./assets/LI-Logo.png" alt="LinkedIn Link"></a>
 		</div>
 	</div>
 
 	<div id="contentArea">
-		<a class="quick">
+		<a class="quick" href="../InitiativeTracker/index.html">
 			<div class="quickContent">
 				<img src="./assets/initiativeThumb.png">
 				<h3>Initiative tracker!</h3>
@@ -26,32 +26,32 @@
 		</a>
 		<a class="quick">
 			<div class="quickContent">
-				<h3>Initiative tracker!</h3>
+				<h3>Placeholder</h3>
 			</div>
 		</a>
 		<a class="quick">
 			<div class="quickContent">
-				<h3>Initiative tracker!</h3>
+				<h3>Placeholder</h3>
 			</div>
 		</a>
 		<a class="quick">
 			<div class="quickContent">
-				<h3>Initiative tracker!</h3>
+				<h3>Placeholder</h3>
 			</div>
 		</a>
 		<a class="quick">
 			<div class="quickContent">
-				<h3>Initiative tracker!</h3>
+				<h3>Placeholder</h3>
 			</div>
 		</a>
 		<a class="quick">
 			<div class="quickContent">
-				<h3>Initiative tracker!</h3>
+				<h3>Placeholder</h3>
 			</div>
 		</a>
 		<a class="quick">
 			<div class="quickContent">
-				<h3>Initiative tracker!</h3>
+				<h3>Placeholder</h3>
 			</div>
 		</a>
 	</div>
