--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div>
 
 	<div id="contentArea">
-		<a class="quick" href="../InitiativeTracker/index.html">
+		<a class="quick" href="tools/InitiativeTracker/index.html">
 			<div class="quickContent">
 				<img src="./assets/initiativeThumb.png">
 				<h3>Initiative tracker!</h3>
