--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <head>
 	<title>Greyscale.dev!</title>
 	<link rel="stylesheet" href="./css/main.css">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
+	 <script type="text/javascript" src="https://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
+	<script src="./js/main.js" text="type/javascript"></script>
 </head>
 
 <body>
