Character gen link

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 				<h3>Initiative tracker!</h3>
 			</div>
 		</a>
-		<a class="quick">
+		<a class="quick" href="tools/CharacterGenerator/index.html">
 			<div class="quickContent">
-				<h3>Placeholder</h3>
+				<img src="./assets/characterGenThumb.PNG">
+				<h3>Character Generator</h3>
 			</div>
 		</a>
 		<a class="quick">
