--- a/index.html
+++ b/index.html
@@ -23,39 +23,26 @@
 	<div id="contentArea">
 		<a class="quick" href="tools/InitiativeTracker/index.html">
 			<div class="quickContent">
-				<img src="./assets/initiativeThumb.png">
+				<img src="./assets/initiativeThumb.png" alt="Initiative Tracker">
 				<h3>Initiative tracker!</h3>
 			</div>
 		</a>
 		<a class="quick" href="tools/CharacterGenerator/index.html">
 			<div class="quickContent">
-				<img src="./assets/characterGenThumb.PNG">
+				<img src="./assets/characterGenThumb.PNG" alt="Character Generator">
 				<h3>Character Generator</h3>
 			</div>
 		</a>
-		<a class="quick">
+		<a class="quick" href="https://github.com/DinkieShy/podcar">
 			<div class="quickContent">
-				<h3>Placeholder</h3>
+				<img src="./assets/podcar.png" alt="podcar simulation">
+				<h3>Lincoln Podcar Sim (BSc project)</h3>
 			</div>
 		</a>
-		<a class="quick">
+		<a class="quick" href="tools/GeometryMadness/index.html">
 			<div class="quickContent">
-				<h3>Placeholder</h3>
-			</div>
-		</a>
-		<a class="quick">
-			<div class="quickContent">
-				<h3>Placeholder</h3>
-			</div>
-		</a>
-		<a class="quick">
-			<div class="quickContent">
-				<h3>Placeholder</h3>
-			</div>
-		</a>
-		<a class="quick">
-			<div class="quickContent">
-				<h3>Placeholder</h3>
+				<img src="./assets/Geometry_Polygon.PNG" alt="Geometry Madness">
+				<h3>Geometry Madness</h3>
 			</div>
 		</a>
 	</div>
