--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
 	 <script type="text/javascript" src="https://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
 	<script src="./js/main.js" text="type/javascript"></script>
+ 	<meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
