lorem ipsum profile

--- a/index.html
+++ b/index.html
@@ -22,31 +22,39 @@
 		</div>
 	</div>
 
-	<div id="contentArea">
-		<a class="quick" href="tools/InitiativeTracker/index.html">
-			<div class="quickContent">
-				<img src="./assets/initiativeThumb.png" alt="Initiative Tracker">
-				<h3>Initiative tracker!</h3>
-			</div>
-		</a>
-		<a class="quick" href="tools/CharacterGenerator/index.html">
-			<div class="quickContent">
-				<img src="./assets/characterGenThumb.PNG" alt="Character Generator">
-				<h3>Character Generator</h3>
-			</div>
-		</a>
-		<a class="quick" href="https://github.com/DinkieShy/podcar">
-			<div class="quickContent">
-				<img src="./assets/podcar.png" alt="podcar simulation">
-				<h3>Lincoln Podcar Sim (BSc project)</h3>
-			</div>
-		</a>
-		<a class="quick" href="tools/GeometryMadness/index.html">
-			<div class="quickContent">
-				<img src="./assets/Geometry_Polygon.PNG" alt="Geometry Madness">
-				<h3>Geometry Madness</h3>
-			</div>
-		</a>
+	<div class="contentArea">
+		<h3>Quick links:</h2>
+		<div id="quickLinks">
+			<a class="quick" href="tools/InitiativeTracker/index.html">
+				<div class="quickContent">
+					<img src="./assets/initiativeThumb.png" alt="Initiative Tracker">
+					<h4>Initiative tracker!</h4>
+				</div>
+			</a>
+			<a class="quick" href="tools/CharacterGenerator/index.html">
+				<div class="quickContent">
+					<img src="./assets/characterGenThumb.PNG" alt="Character Generator">
+					<h4>Character Generator</h4>
+				</div>
+			</a>
+			<a class="quick" href="tools/GeometryMadness/index.html">
+				<div class="quickContent">
+					<img src="./assets/Geometry_Polygon.PNG" alt="Geometry Madness">
+					<h4>Geometry Madness</h4>
+				</div>
+			</a>
+			<a class="quick" href="https://github.com/DinkieShy/podcar">
+				<div class="quickContent">
+					<img src="./assets/podcar.png" alt="podcar simulation">
+					<h4>Lincoln Podcar Sim (BSc project)</h4>
+				</div>
+			</a>
+		</div>
+	</div>
+
+	<div class="contentArea">
+		<h3>Who am I?</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
 </body>
 
