Add Request wheel to quick tools

--- a/index.html
+++ b/index.html
@@ -49,12 +49,18 @@
 					<h4>Lincoln Podcar Sim (BSc project)</h4>
 				</div>
 			</a>
+			<a class="quick" href="tools/Waffle-s-Wacky-Wequest-Wheel/index.html">
+				<div class="quickContent">
+					<img src="./tools/Waffle-s-Wacky-Wequest-Wheel/assets/thumbnail.png" alt="Request Timer Wheel">
+					<h4>Waffle's Wacky Wequest Wheel</h4>
+				</div>
+			</a>
 		</div>
 	</div>
 
 	<div class="contentArea">
 		<h3>Who am I?</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>My name is Grey! I'm a non-binary (they/them pronouns) computer scientist currently studying towards my PhD, specifically in the domain of machine learning for agriculture.</p>
 	</div>
 </body>
 
